Fixed restart method