@@ -438,14 +438,23 @@ public class ServerManager implements Runnable, ActionListener{
 //		}
 	}
 	
-	private void restartProgram()
+	public void restartProgram()
 	{
-		try {
-			Runtime.getRuntime().exec("java -jar StartServer.jar " + name + " " + ClientAccountWindow.Domain);
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+	  /* Build command: java -jar application.jar */
+	  final ArrayList<String> command = new ArrayList<String>();
+	  command.add("java");
+	  command.add("-jar");
+	  command.add("StartServer.jar");
+	  command.add(name);
+	  command.add(ClientAccountWindow.Domain);
+
+	  final ProcessBuilder builder = new ProcessBuilder(command);
+	  try {
+		builder.start();
 		System.exit(0);
+	  } catch (IOException e) {
+		e.printStackTrace();
+	  }
 	}
 
 	public void actionPerformed(ActionEvent arg0) {
